Fixed horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
 body {
     font-family: 'Poppins', Arial, sans-serif;
     display: flex;
